// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should match the snapshot for a checked check 1`] = `
<div
  class="lightGrid root checkbox checked row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:flex-start;align-content:center;align-items:center;padding:var(--global--space--3);width:inherit;height:inherit"
>
  <input
    checked=""
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable selected"
  >
    <svg
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M448 149.333l-256 256L74.667 288l30.08-30.08L192 344.96l225.92-225.707 30.08 30.08z"
      />
    </svg>
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="gridItem label"
    style="flex-grow:1;flex-shrink:1;flex-basis:auto;display:flex;min-width:auto;margin:0 calc(0.5 * var(--global--space--0))"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a focused check 1`] = `
<Component
  label="check label 1"
  value="1"
>
  <CheckableBase
    checked={false}
    className="checkbox"
    disabled={false}
    handleChange={[Function]}
    handleClick={[Function]}
    inputName=""
    inputType="checkbox"
    label="check label 1"
    value="1"
  >
    <Grid
      className="root checkbox"
      direction="row"
      gutter="space-0"
      height="inherit"
      layoutAlign="start"
      layoutPerpendicularAlign="center"
      padding="space-3"
      width="inherit"
      wrap="nowrap"
    >
      <LightGrid
        className="root checkbox"
        direction="row"
        gutter="space-0"
        height="inherit"
        layoutAlign="start"
        layoutPerpendicularAlign="center"
        padding="space-3"
        width="inherit"
        wrap="nowrap"
      >
        <div
          className="lightGrid root checkbox row"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": "inherit",
              "justifyContent": "flex-start",
              "padding": "var(--global--space--3)",
              "width": "inherit",
            }
          }
        >
          <input
            checked={false}
            className="nativeInput"
            disabled={false}
            name=""
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            className="checkable"
          >
            <div
              className="box"
            />
          </div>
          <div
            className="focusRect"
          />
          <GridItem
            Component="label"
            className="label"
            grow={1}
            shrink={1}
          >
            <label
              className="gridItem label"
              style={
                Object {
                  "display": "flex",
                  "flexBasis": "auto",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "height": undefined,
                  "margin": "0 calc(0.5 * var(--global--space--0))",
                  "minWidth": "auto",
                  "width": undefined,
                }
              }
            >
              check label 1
            </label>
          </GridItem>
        </div>
      </LightGrid>
    </Grid>
  </CheckableBase>
</Component>
`;

exports[`<CheckBox /> should match the snapshot for a single check 1`] = `
<div
  class="lightGrid root checkbox row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:flex-start;align-content:center;align-items:center;padding:var(--global--space--3);width:inherit;height:inherit"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="gridItem label"
    style="flex-grow:1;flex-shrink:1;flex-basis:auto;display:flex;min-width:auto;margin:0 calc(0.5 * var(--global--space--0))"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check with no value or label 1`] = `
<div
  class="lightGrid root checkbox row"
  style="flex-wrap:nowrap;flex-direction:row;justify-content:flex-start;align-content:center;align-items:center;padding:var(--global--space--3);width:inherit;height:inherit"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
  />
  <div
    class="checkable"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="gridItem label"
    style="flex-grow:1;flex-shrink:1;flex-basis:auto;display:flex;min-width:auto;margin:0 calc(0.5 * var(--global--space--0))"
  />
</div>
`;
